Mon Mar 17 09:52:03 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/IO_SAP.h:
        * ace/IO_SAP.cpp:
        * ace/IPC_SAP.cpp:
        * ace/IPC_SAP.h:
          Don't try to cache the process id, but just call the ACE OS
          method when needed (which is just in some cases and the operation
          is inline). Fixes possible data races reported by Intel Inspector
          XE.

Mon Mar 17 09:50:48 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Process.inl:
          Layout change

Fri Mar 14 15:58:19 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Auto_Event_Test.cpp:
          Use atomic op for amount of timeouts to fix data race reported
          by Intel Inspector XE

Fri Mar  7 15:30:15 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.cpp:
          Missed one place where flags_ was used

Fri Mar  7 15:26:15 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.cpp:
          Fixed a data race condition related to the ACE_Log_Msg::flags_
          static variable. Setting/retrieving it from application code
          was using a lock, but the ACE_Log_Msg::log didn't use the lock
          in the part where it is building up the ACE Log Record. Put
          a flags variable on the stack which we only set once using the
          accessor method which uses the lock, than check that flag
          inside the method.

Fri Mar  7 12:37:04 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Timer_Hash_T.cpp:
          Initialize pointer member explicitly to zero to resolve
          Coverity error

Fri Mar  7 12:02:17 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Reactor_Token_T.cpp:
          Use copy constructor instead of assignment operator

        * ace/Timer_Hash_T.h:
        * ace/Timer_List_T.h:
        * ace/WFMO_Reactor.h:
          Doxygen improvements

        * ace/WFMO_Reactor.cpp: